--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".ui.player.PlayerActivity"></activity>
         <activity android:name=".ui.album.AlbumActivity" />
         <activity android:name=".ui.login.SignupActivity" />
         <activity android:name=".ui.login.LoginActivity" />
