--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-compat:28.0.0"
     implementation 'gun0912.ted:tedimagepicker:1.0.8'
     implementation 'androidx.wear:wear:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
