--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="dev.doyeong.theillogical">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
@@ -12,12 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.player.PlaylistActivity"></activity>
-        <activity android:name=".ui.player.PlayerActivity" />
-        <activity android:name=".ui.album.AlbumActivity" />
-        <activity android:name=".ui.login.SignupActivity" />
-        <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.player.PlaylistActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name=".ui.player.PlayerActivity"  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.album.AlbumActivity"  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.login.SignupActivity"  android:screenOrientation="portrait"/>
+        <activity android:name=".ui.login.LoginActivity" android:screenOrientation="portrait" />
+        <activity android:name=".MainActivity"  android:screenOrientation="portrait">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
 
